adding recommendation header

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,9 @@
         <div id="loadingMessage" style="display: none;">
             <p>Making recommendations...</p>
         </div>
-
+        
         <div id="resultsSection" style="display: none;">
+            <h3 id="recommendationTitle" class="recommendation-title" style="display: none;">RECOMMENDATIONS:</h3>
             <ul id="recommendationsList" class="list-group"></ul>
 
             <!-- Feedback Section -->
