--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     min-height: 100vh;
     padding: 2% 0; 
+}
 .center-text {
     text-align: center;
 }
@@ -44,7 +45,7 @@ h2 {
     font-size: 1.2em;  
     font-weight: 400;  
     text-align: center;
-    color: #666; 
+    color: #666;  
     margin-bottom: 20px;  
 }
 
@@ -140,10 +141,10 @@ button {
     animation: fadeOut 3s forwards 3s;
 }
 hr {
-    width: 95%; 
+    width: 95%;  
     border: 0;
-    border-top: 1px solid #ccc; 
-    margin: 20px auto; 
+    border-top: 1px solid #ccc;  
+    margin: 20px auto;  
 }
 
 
