--- a/templates/index.html
+++ b/templates/index.html
@@ -1,88 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Recommendation Website</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Music Recommendation Website</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <div class="main-wrapper">
-    <div class="container">
-        <h1 class="mb-4">Music Recommendation Website</h1>
-        <h2>Leveraging machine learning models and Spotify data to create personalized music recommendations</h2>
-        <hr>
-        <form action="/get_recommendations" method="post">
-            <div id="initialPrompt">
-               <h4 class="center-text">What music recommendation model would you like to use?</h4>
-                <p><strong>Popularity Based:</strong> Gives recommendations based on current popular music trends.</p>
-                <p><strong>Cosine Similarity:</strong> Finds music similar to your taste using cosine similarity metrics.</p>
-                <p><strong>K-Means Clustering:</strong> Groups music into clusters and recommends from a relevant cluster.</p>
-                <p><strong>Neural Network:</strong> Uses deep learning to give music suggestions (may take a few minutes).</p>
-                <select name="modelType" id="modelTypeSelector">
-                    <option value="">--Select a model--</option>
-                    <option value="popularity_based">Popularity Based Recommendation</option>
-                    <option value="cosine_similarity">Cosine Similarity Recommendation</option>
-                    <option value="kmeans">K-Means Clustering Recommendation</option>
-                    <option value="nn">Neural Network Recommendation</option>
-                </select>
-            </div>
-        
-            <div id="inputSection" style="display: none;">
-                <!-- Popularity Inputs -->
-                <div id="popularityInputs" style="display: none;">
-                    <select name="genre">
-                        <option value="Pop">Pop</option>
-                        <option value="Country">Country</option>
-                        <option value="Rock">Rock</option>
-                        <option value="Hip-Hop/Rap">Hip-Hop/Rap</option>
-                        <option value="Electronic/Dance">Electronic/Dance</option>
-                        <option value="R&B">R&B</option>
-                        <option value="Jazz">Jazz</option>
-                    </select>
-                    <input type="number" name="numRecommendationsPop" value="3" min="1" max="10" placeholder="Number of Recommendations">
+   <div class="container">
+       <h1> Music Recommendation Website</h1>
+       <h5>Get personalized music recommendations based on your taste (with some help from machine learning)</h5>
+       <hr>
+       <form action="/get_recommendations" method="post">
+           <div id="initialPrompt">
+               <label for="genre">Select a Reccomendation Model:</label>
+               <select name="modelType" id="modelTypeSelector">
+                   <option value="">--Select a model--</option>
+                   <option value="popularity_based">Popularity Based</option>
+                   <option value="cosine_similarity">Cosine Similarity</option>
+                   <option value="kmeans">K-Means Clustering</option>
+                   <option value="nn">Neural Network (may take a few minutes)</option>
+               </select>
+           </div>
+          
+           <div id="inputSection" style="display: none;">
+               <!-- Popularity Inputs -->
+               <div id="popularityInputs" style="display: none;">
+                   <label for="genre">Select a Genre:</label>
+                   <select name="genre" id="genre">
+                       <option value="Pop">Pop</option>
+                       <option value="Country">Country</option>
+                       <option value="Rock">Rock</option>
+                       <option value="Hip-Hop/Rap">Hip-Hop/Rap</option>
+                       <option value="Electronic/Dance">Electronic/Dance</option>
+                       <option value="R&B">R&B</option>
+                       <option value="Jazz">Jazz</option>
+                   </select>
+                  
+                   <label for="numRecommendationsPop">Number of Recommendations:</label>
+                   <input type="number" name="numRecommendationsPop" id="numRecommendationsPop" value="3" min="1" max="10" placeholder="Number of Recommendations">
+               </div>
 
-                </div>
 
-                <!-- ML Inputs -->
-                <div id="MLInputs">
-                    <div class="message-box">Enter a song that you'd like recommendations based on:</div>
-                    <input type="text" name="artist" placeholder="Artist Name">
-                    <input type="text" name="track_name" placeholder="Track Name">
-                    <input type="number" name="numRecommendationsML" value="3" min="1" max="10" placeholder="Number of Recommendations">
-                </div>
+               <!-- ML Inputs -->
+               <div id="MLInputs">
+                   <div class="message-box">Enter a song you'd like recommendations based on:</div>
+                   <label for="artist">Artist Name:</label>
+                   <input type="text" name="artist" id="artist" placeholder="Artist Name">
+                  
+                   <label for="track_name">Track Name:</label>
+                   <input type="text" name="track_name" id="track_name" placeholder="Track Name">
+                  
+                   <label for="numRecommendationsML">Number of Recommendations:</label>
+                   <input type="number" name="numRecommendationsML" id="numRecommendationsML" value="3" min="1" max="10" placeholder="Number of Recommendations">
+               </div>
 
-                <button type="submit" id="generateBtn" class="btn btn-primary mb-3">Generate Recommendations</button>
-            </div>
-        </form>
 
-        <div id="loadingMessage" style="display: none;">
-            <p>Making recommendations...</p>
-        </div>
-        
-        <div id="resultsSection" style="display: none;">
-            <h3 id="recommendationTitle" class="recommendation-title" style="display: none;">RECOMMENDATIONS:</h3>
-            <ul id="recommendationsList" class="list-group"></ul>
+               <button type="submit" id="generateBtn" class="btn btn-primary">Generate Recommendations</button>
+           </div>
+       </form>
 
-            <!-- Feedback Section -->
-            <div id="feedbackSection" style="display: none;">
-                <label for="feedbackRating"class="mt-4">Rate our recommendations:</label>
-                <select id="feedbackRating">
-                    <option value="1">Poor</option>
-                    <option value="2">Fair</option>
-                    <option value="3" selected>Good</option>
-                    <option value="4">Very Good</option>
-                    <option value="5">Excellent</option>
-                </select>
-                <button id="submitFeedback">Submit Feedback</button>
-            </div>
-            <button id="restartButton" class="btn btn-primary mt-5">Get new Recommendation</button>
-        </div>
-    </div>
-    <div id="feedbackSubmittedMessage" style="display: none;">Feedback Submitted</div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+       <div id="loadingMessage" style="display: none;">
+           <p>Generating recommendations...</p>
+       </div>
+      
+       <div id="resultsSection" style="display: none;">
+           <h3 id="recommendationTitle" style="display: none;">Your Recommendations:</h3>
+           <ul id="recommendationsList" class="list-group"></ul>
+
+
+           <!-- Feedback Section -->
+           <div id="feedbackSection" style="display: none;">
+               <label for="feedbackRating">Rate your Recommendations:</label>
+               <select id="feedbackRating">
+                   <option value="1">Poor</option>
+                   <option value="2">Fair</option>
+                   <option value="3" selected>Good</option>
+                   <option value="4">Very Good</option>
+                   <option value="5">Excellent</option>
+               </select>
+               <button id="submitFeedback">Submit Feedback</button>
+           </div>
+           <button id="restartButton" class="btn btn-primary mt-3">Get New Recommendation</button>
+       </div>
+   </div>
+   <div id="feedbackSubmittedMessage" style="display: none;">Feedback Submitted</div>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
+
